# fossil-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  OPTIMIZATION_IMPLEMENTATION.md  OPTIMIZATION_PLAN.md  README.md  RESEARCH_INDEX.md  RESEARCH_SKETCH_OPTIMIZATION.md  RESEARCH_SOURCES.md  RESEARCH_SUMMARY.md  SECURITY.md  SKETCH_COMPARISON_MATRIX.md  SKETCH_IMPLEMENTATION_EXAMPLES.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: fossil-check.yml  fossil.toml
examples/clones/: helpers_a.js  helpers_b.js  utils_v1.py  utils_v2.py
examples/dead-code/: data_pipeline.py  event_system.ts  middleware.js  repository.go
fixtures/: UserService.java  auth.rb  duplicate.py  sample.py
src/: lib.rs  main.rs  update.rs
src/analysis/: aggregator.rs  cache.rs  diff_analyzer.rs  hot_functions.rs  incremental.rs  mod.rs  persistent_cache.rs  pipeline.rs  scanner.rs  sieve_cache.rs  stats.rs  stress_test.rs
src/ast/: mod.rs  node.rs  types.rs  visitor.rs
src/ci/: diff.rs  mod.rs  report.rs  runner.rs  threshold.rs
src/cli/: mod.rs
src/cli/commands/: check.rs  clones.rs  dead_code.rs  mod.rs  rules.rs  scaffolding.rs  scan.rs  stress_test.rs  update.rs  weekly.rs  weekly_cache.rs
src/clones/: apted.rs  ast_tree.rs  benchmark.rs  block_clones.rs  clustering.rs  code_embeddings.rs  cross_language.rs  detector.rs  evolution.rs  fingerprint_store.rs  ir_tokenizer.rs  lsh_index.rs  merkle.rs  minhash.rs  mod.rs  ngram_index.rs  scalability.rs  semantic.rs  simhash.rs  sketch_features.rs  tree_edit_distance.rs  types.rs
src/config/: cache.rs  mod.rs  presets.rs
src/core/: error.rs  mod.rs  scoring.rs  text_utils.rs  timer.rs  traits.rs  types.rs
src/dead_code/: bdd_detector.rs  classifier.rs  detector.rs  entry_points.rs  feature_flags.rs  mod.rs
src/graph/: bloom_filter.rs  builder.rs  centrality.rs  cfg.rs  class_hierarchy.rs  code_graph.rs  constant_prop.rs  csr_format.rs  dataflow.rs  expr_evaluator.rs  import_resolver.rs  interprocedural_const_prop.rs  mod.rs  pdg.rs  rta.rs  sdg.rs  slicing.rs  symbol_table.rs  var_extractor.rs  vta.rs
src/lsp/: mod.rs
src/mcp/: context.rs  mod.rs
src/mcp/tools/: blast_radius.rs  call_graph.rs  cfg.rs  data_flow.rs  explain_finding.rs  inspect.rs  mod.rs  scaffolding.rs  trace.rs
src/output/: json.rs  mod.rs  sarif.rs  text.rs
src/parsers/: extractor.rs  mod.rs  parse_tree.rs  parser_macro.rs  parsers.rs  registry.rs
src/rules/: database.rs  loader.rs  mod.rs  semgrep_converter.rs
tests/: check_command.rs  end_to_end.rs  integration_diff.rs  min_lines_filter.rs
