[package]
name = "fossil-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Yury Fedoseev <yfedoseev@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://fossil-mcp.com"
repository = "https://github.com/yfedoseev/fossil-mcp"
description = "Multi-language static analysis toolkit with MCP server. Detects dead code, code clones, and AI scaffolding."
readme = "README.md"
keywords = ["static-analysis", "dead-code", "mcp", "code-clones", "linter"]
categories = ["development-tools", "command-line-utilities"]
rust-version = "1.75"
exclude = [
    "examples/",
    "fixtures/",
    "benches/",
    ".github/",
    "docs/",
]

[lib]
name = "fossil_mcp"
path = "src/lib.rs"

[[bin]]
name = "fossil-mcp"
path = "src/main.rs"

[dependencies]
# Parsing
tree-sitter = "0.26"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-bash = "0.25"
tree-sitter-scala = "0.24"
streaming-iterator = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
toml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1.0"

# Data structures
petgraph = "0.6"
indexmap = { version = "2.0", features = ["serde"] }
dashmap = "6.1"

# Hashing
sha2 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Probabilistic data structures
sketch_oxide = "0.1.6"

# Concurrency
rayon = "1.8"
tokio = { version = "1.40", features = ["full"] }
parking_lot = "0.12"

# CLI
clap = { version = "4.5", features = ["derive"] }
is-terminal = "0.4"

# LSP
tower-lsp = "0.20"

# Filesystem
walkdir = "2.4"
ignore = "0.4"
glob = "0.3"

# Regex
regex = "1.10"

# Misc
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"
log = "0.4"

[dev-dependencies]
tempfile = "3.10"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1
